--- a/square-root/src/pages/Partner.css
+++ b/square-root/src/pages/Partner.css
@@ -1,72 +1,67 @@
 .float-container-partner {
-    padding: 2%;
-    height: 550px;
-    background-color: #8ca68c;
-    margin-left:5%;
-    margin-right:5%;
+  padding: 2%;
+  height: 550px;
+  background-color: #8ca68c;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .float-child {
-
-    float: left;
-    padding: 0%;
-    max-width: 960px;
-    
+  float: left;
+  padding: 0%;
+  max-width: 960px;
 }
 
-.background-white
-{
-    background-color: white;
-    padding:2%;
+.background-white {
+  background-color: white;
+  padding: 2%;
 }
 
-.partner-h1{
-    font-size: 35px;
-    font-weight: bold;
+.partner-h1 {
+  font-size: 35px;
+  font-weight: bold;
 }
 
-.about{
-    width: 100%;
-    height: 100%;
-    
+.about {
+  width: 100%;
+  height: 100%;
 }
-.about img{
-    height: 100%;
-}
-
-.width-40{
-    width:40%;
+.about img {
+  height: 100%;
 }
 
-.width-60{
-    width:60%;
+.width-40 {
+  width: 40%;
 }
-.about-name{
-    font-size: 50px;
-    color: white;
-    padding: 3%;
-    position: relative;
-    top: 30%;
-    left: 10%;
+
+.width-60 {
+  width: 60%;
 }
-.partner-p{
-    font-size: 18px;
-    color: black;
+.about-name {
+  font-size: 50px;
+  color: white;
+  padding: 3%;
+  position: relative;
+  top: 30%;
+  left: 10%;
+}
+.partner-p {
+  font-size: 18px;
+  color: black;
 }
 
 .partner-lbl {
-    margin-bottom:20px;
-    
+  margin-bottom: 20px;
 }
 
-input[name="partner-input"]{
-    border:none;
-    border-radius: 0;
-    border-bottom:1px solid grey
+input[name="partner-input"] {
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid grey;
 }
 
-a[href="terms-and-conditions"]{
-    color:black;
+a[href="terms-and-conditions"] {
+  color: black;
 }
 
 /* The checkbox container */
@@ -91,7 +86,6 @@ a[href="terms-and-conditions"]{
   width: 0;
 }
 
-
 .checkmark {
   position: absolute;
   top: 0;
@@ -107,11 +101,9 @@ a[href="terms-and-conditions"]{
   display: none;
 }
 
-
 .checkbox-container input:checked ~ .checkmark:after {
   display: block;
 }
-
 
 .checkbox-container .checkmark:after {
   left: 8px;
@@ -125,64 +117,62 @@ a[href="terms-and-conditions"]{
   transform: rotate(45deg);
 }
 
-.btn-partner{
-    width:20%;
-    padding: 10px;
-    background-color: white;
-    border-color:1px solid #799779;
-    border-radius: 3px;
-    float:right;
-    cursor: pointer;
+.btn-partner {
+  width: 20%;
+  padding: 10px;
+  background-color: white;
+  border-color: 1px solid #799779;
+  border-radius: 3px;
+  float: right;
+  cursor: pointer;
 }
 
-.about-inspo{
-    font-weight: bold;
-    font-size: 30px;
-    position: relative;
-    left: 40%;
-    padding-top: 3%;
+.about-inspo {
+  font-weight: bold;
+  font-size: 30px;
+  position: relative;
+  left: 40%;
+  padding-top: 3%;
 }
-.about-inspo-desc{
-    font-size: 20px;
-    position: relative;
-    text-align: center;
-    left: 25%;
-    width: 50%;
-    padding-bottom: 2%;
-
+.about-inspo-desc {
+  font-size: 20px;
+  position: relative;
+  text-align: center;
+  left: 25%;
+  width: 50%;
+  padding-bottom: 2%;
 }
 .inspo-images {
-    border: 3px solid #fff;
-    padding-top: 0%;
-    height: 500px;
-    padding-left: 10%;
+  border: 3px solid #fff;
+  padding-top: 0%;
+  height: 500px;
+  padding-left: 10%;
 }
 
 .inspo-image1 {
-    width: 45%;
-    float: left;
-    padding: 2%;
-    height: 100%;
-    
+  width: 45%;
+  float: left;
+  padding: 2%;
+  height: 100%;
 }
-.inspo-h{
-    position: relative;
-    left: 45%;
-    font-size: 20px;
+.inspo-h {
+  position: relative;
+  left: 45%;
+  font-size: 20px;
 }
-.partner-title{
-    position: relative;
-    left: 42%;
-    padding-top: 2%;
-    font-weight: bold;
-    font-size: 30px;
+.partner-title {
+  position: relative;
+  left: 42%;
+  padding-top: 2%;
+  font-weight: bold;
+  font-size: 30px;
 }
-.partner-desc{
-    position: relative;
-    left: 24%;
-    padding-top: 1%;
-    background-color: white;
-    font-size: 20px;
-    width: 50%;
-    text-align: center;
+.partner-desc {
+  position: relative;
+  left: 24%;
+  padding-top: 1%;
+  background-color: white;
+  font-size: 20px;
+  width: 50%;
+  text-align: center;
 }
