--- a/square-root/src/App.css
+++ b/square-root/src/App.css
@@ -9,8 +9,10 @@
   --mainWhite: #fff;
   --offWhite: #f7f7f7;
   --mainBlack: #222;
-  --mainGrey: #bababa;
+  --mainGrey: #3e3d3d;
   --darkGrey: #838383;
+  --mainGreen: #8ca68c;
+  --hoverGreen: #ccd7cc;
   --mainTransition: all 0.3s linear;
   --mainSpacing: 3px;
   --lightShadow: 2px 5px 3px 0px rgba(0, 0, 0, 0.5);
