--- a/square-root/src/App.sass
+++ b/square-root/src/App.sass
@@ -25,7 +25,7 @@ $fullhd-enabled: false
 $dark: $darker
 
 // Update some of Bulma's component variables
-$body-background-color: $purple
+$body-background-color: transparent
 $control-border-width: 2px
 $input-border-color: transparent
 $input-shadow: none
