--- a/square-root/src/App.css
+++ b/square-root/src/App.css
@@ -337,7 +337,7 @@ body {
 /* plant-modal*/
 .plant-modal-title {
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .plant-modal-title h1 {
@@ -367,6 +367,24 @@ body {
   width: auto;
   letter-spacing: var(--mainSpacing);
 }
+/* customize */
+.cust-concept-title {
+  position: relative;
+  left: 5%;
+  width: 100%;
+  margin-top: 8%;
+}
+
+.cust-concept-title h1 {
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.cust-concept-title p {
+  width: 60%;
+  padding-top: 0;
+}
+/* End of Titles */
 /* How it works */
 .how {
   height: 100%;
