--- a/square-root/src/components/SinglePlant.css
+++ b/square-root/src/components/SinglePlant.css
@@ -20,7 +20,7 @@
   padding-top: 20px;
 }
 
-.plant-modal-content {
+.plant-modal-header {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: black;
@@ -32,4 +32,90 @@
   width: 100%;
 }
 
+.plant-modal-content {
+  padding: 0.2% 10%;
+  pointer-events: none;
+  display: flex;
+}
 
+.plant-modal-img-container {
+  flex: 50%;
+  margin: 0px 15px 15px 0px;
+  width: 180px;
+  height: 200px;
+}
+
+.plant-modal-img-container img {
+  width: 100%;
+  height: 100%;
+}
+
+.features-container {
+  flex: 50%;
+  width: 90%;
+  margin: auto;
+  display: grid;
+  margin-left: 2%;
+  grid-template-rows: repeat(auto-fill, 30px);
+  grid-row-gap: 0;
+  text-align: left;
+  font-size: 18px;
+  font-family: "Segoe UI", Arial;
+  overflow: auto;
+  white-space: pre-line;
+}
+
+.feature:after {
+  clear: both;
+}
+
+.feature-name {
+  font-weight: bold;
+  color: var(--bg);
+  float: left;
+  width: auto;
+  height: auto;
+}
+
+.feature-content {
+  font-weight: normal;
+  color: var(--darkGrey);
+  overflow: hidden;
+  float: left;
+  margin-left: 10px;
+  width: 140px;
+  height: auto;
+}
+
+.ReactModalPortal > div {
+  opacity: 0;
+}
+
+.ReactModalPortal .ReactModal__Overlay {
+  transition: opacity 500ms ease-in-out;
+  background: rgba(0, 0, 0, 0.15);
+}
+
+.ReactModalPortal .ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModalPortal .ReactModal__Overlay--before-close {
+  opacity: 0;
+}
+
+/*.ReactModal__Overlay {
+  opacity: 0;
+  transform: translateX(-100px);
+  transition: all 500ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+  transform: translateX(0px);
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+  transform: translateX(-100px);
+}*/
