--- a/square-root/src/pages/Customize.css
+++ b/square-root/src/pages/Customize.css
@@ -1,3 +1,7 @@
+.customize {
+  padding-top: 0;
+}
+
 .pf {
   display: block;
 }
@@ -27,23 +31,6 @@ label {
   position: absolute;
   top: 13%;
   right: 0;
-}
-
-.cust-concept-title {
-  position: relative;
-  left: 5%;
-  width: 100%;
-  margin-top: 8%;
-}
-
-.cust-concept-title h1 {
-  font-size: 50px;
-  font-weight: bold;
-}
-
-.cust-concept-title p {
-  width: 60%;
-  padding-top: 0;
 }
 
 .filters {
