code restructuring plants divided into container, filter and list

--- a/square-root/src/styles/Plants.css
+++ b/square-root/src/styles/Plants.css
@@ -13,24 +13,9 @@ label {
   padding-left: 7%;
 }
 
-.filters {
-  height: auto;
-  width: 18%;
-  position: fixed;
-  z-index: 1;
-  top: 28%;
-  left: 0%;
-  padding-left: 2.5%;
-  background-color: var(--offWhite);
-  overflow-x: hidden;
-  padding-top: 20px;
-}
-
 input {
   margin: 2%;
 }
-
-
 
 /*---------------*/
 .plant {
@@ -171,6 +156,70 @@ input {
 @media screen and (min-width: 992px) {
   .plantlist-center {
     width: 85vw;
+    max-width: 1170px;
+  }
+}
+
+/* filters */
+/*.filter-container {
+  height: auto;
+  width: 20vw;
+  position: fixed;
+  padding: 0.5rem 0;
+  margin: 0 20% 0 0;
+  padding-left: 2.5%;
+  background-color: var(--offWhite);
+  overflow-x: hidden;
+  padding-top: 20px;
+}*/
+
+.filter-container {
+  padding: 5rem 0;
+}
+.filter-form {
+  width: 60vw;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(202px, 1fr));
+  grid-row-gap: 2rem;
+  grid-column-gap: 40px;
+}
+.form-group {
+  text-transform: capitalize;
+}
+.form-group label {
+  display: block;
+  letter-spacing: var(--mainSpacing);
+  margin-bottom: 0.5rem;
+}
+.form-control {
+  width: 100%;
+  background: transparent;
+  font-size: 1rem;
+}
+.size-inputs {
+  display: flex;
+}
+.size-input {
+  width: 40%;
+  padding: 0.2rem;
+  border: 1px solid var(--mainBlack);
+  border-radius: 0.3rem;
+  margin-right: 0.3rem;
+}
+.single-extra label {
+  display: inline-block;
+  font-size: 0.8rem;
+  margin-left: 0.5rem;
+}
+@media screen and (min-width: 776px) {
+  .filter-form {
+    width: 70vw;
+  }
+}
+@media screen and (min-width: 992px) {
+  .filter-form {
+    width: 95vw;
     max-width: 1170px;
   }
 }
