--- a/square-root/src/App.sass
+++ b/square-root/src/App.sass
@@ -6,6 +6,7 @@
 
 // Set your brand colors
 $purple: #8a4d76
+$green: #4e864e
 $pink: #fa7c91
 $brown: #757763
 $beige-light: #d0d1cd
@@ -19,7 +20,7 @@ $grey-dark: $brown
 $grey-light: $beige-light
 $primary: $purple
 $white: $white
-$link: $purple
+$link: $green
 $widescreen-enabled: false
 $fullhd-enabled: false
 $dark: $darker
