Hero and banner responsive at the home page

--- a/square-root/src/App.sass
+++ b/square-root/src/App.sass
@@ -21,9 +21,9 @@ $grey-light: $beige-light
 $primary: $purple
 $white: $white
 $link: $green
-$widescreen-enabled: false
 $fullhd-enabled: false
 $dark: $darker
+$mobile-enabled: true
 
 // Update some of Bulma's component variables
 $body-background-color: transparent
