--- a/square-root/src/components/Home.css
+++ b/square-root/src/components/Home.css
@@ -9,6 +9,32 @@
 
 /* End of Hero */
 /* Banner */
+.errorBanner {
+  display: inline-block;
+  color: var(--mainWhite);
+  width: 100%;
+  height: 100%;
+  min-height: calc(100vh - var(--nav-size));
+  padding: 2rem 1rem;
+  text-align: center;
+  text-transform: capitalize;
+  background: #474646; /* fallback colour. Make sure this is just one solid colour. */
+  background: rgba(54, 54, 54, 0.8);
+}
+
+.errorBanner h1 {
+  font-size: 3rem;
+  text-align: center;
+  margin-top: 15rem;
+}
+
+.errorBanner div {
+  width: 10rem;
+  height: 5px;
+  background: var(--mainGreen);
+  margin: 1.7rem auto;
+}
+
 .banner {
   display: flex;
   color: var(--mainWhite);
@@ -20,6 +46,12 @@
   text-transform: capitalize;
   background: #474646; /* fallback colour. Make sure this is just one solid colour. */
   background: rgba(54, 54, 54, 0.3);
+}
+
+.banner h1 {
+  font-size: 3rem;
+  text-align: center;
+  margin: auto;
 }
 
 .top-left {
