--- a/square-root/src/styles/Plants.css
+++ b/square-root/src/styles/Plants.css
@@ -19,16 +19,24 @@ label {
   transition: var(--mainTransition);
 }
 
-.plant-img-container p {
+.plant-name {
   box-shadow: var(--lightShadow);
   transition: var(--mainTransition);
   background-color: var(--icon-gray);
   color: var(--bg);
   text-transform: capitalize;
-  padding: 0.5rem 0;
+  line-height: 60px;
+  height: 60px;
   text-align: center;
+}
+
+.plant-name p {
+  display: inline-block;
   font-weight: 700;
   letter-spacing: var(--mainSpacing);
+  line-height: normal;
+  vertical-align: middle;
+  width: 100%;
 }
 
 .plant-img-container {
@@ -101,7 +109,7 @@ label {
   background: rgba(255, 255, 255, 0.4);
 }
 
-.plant-img-container:hover p {
+.plant-img-container:hover .plant-name{
   box-shadow: var(--darkShadow);
 }
 
@@ -130,8 +138,8 @@ label {
   margin: 0 auto 0 20%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
-  grid-row-gap: 4rem;
-  grid-column-gap: 30px;
+  grid-row-gap: 5rem;
+  grid-column-gap: 40px;
   padding: 40px;
   height: 30%;
   flex-wrap: wrap;
