--- a/square-root/src/styles/dropdown.css
+++ b/square-root/src/styles/dropdown.css
@@ -1,69 +1,93 @@
 
-
 .dd-container {
-    max-width: 1140px;
-    width:90%;
-    height:auto;
     background-color: white;
-    border: 1px solid #ccc;
-    font-size: 15px;
-    border-radius: 5px;
-  }
+    font-size: 13px;
+    border-radius: 0px;
+    display: inline-block;
+    vertical-align: middle;
+    text-align: left;
+    width: 90%;
+}
+
+/*
+.dd-container:hover {
+    border:1px solid black;
+    font-weight: bold;
+}
+*/
 
 .dd-wrapper {
     display: flex;
     min-height: 38px;
     flex-wrap: wrap;
+    border:1px solid #ccc;
+    position: relative;
 }
 
-.dd-wrapper:focus{
-    border:1px solid black;
+.seperate-line{
+    border:1 px solid #ccc;
 }
+
 
 .dd-header {
-    display: flex;
-    justify-content: space-between;
     cursor: pointer;
     width: 100%;
     padding:5%;
-    text-align: center;
     display: inline-block;
-    vertical-align: middle;
+    align-items:flex-start;  
 }
 
-.title--bold {
-    font-weight: bold;
-  }
 
 .dd-list {
-    padding: 2px;
-    margin: 0;
-    width: 100%;
-    margin-top: 20px;
+    top: 100%;
+    position: absolute;
+    z-index: 1;
+    width:101.5%;
+left: -0.5%;
+    border-radius: 0px;
+    border-bottom: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    border-left:1px solid #ccc;
+    background-color: white;
 }
 
-li {
-      list-style-type: none;
-    }
 
+/*
+.dd-list:hover .dd-container{
+    border:1px solid black;
+    font-weight: bold;
+}
+*/
+
+.dd-list-item{
+    text-align: left;
+}
 
 .dd-button {
-        display: flex;
+width:100%;
         justify-content: space-between;
         background-color: white;
-        font-size: 16px;
-        padding: 15px 20px 15px 20px;
+        padding: 5%;
         border: 0;
-        border-bottom: 1px solid #ccc;
-        width: 100%;
         text-align: left;
+        margin:0;
+        font-size: 13px;
     }
 
-
-
-.dd-button:hover{
-    background-color: var(--offWhite);
-    font-weight: bold;
-    cursor: pointer;
+.fas{
+    float: right;
 }
 
+.dd-button:hover{
+    font-weight: bold;
+    cursor: pointer;
+    
+}
+
+.dd-borderBox {
+    width:85%;
+    position: relative;
+    border-bottom: 1px solid #ccc;
+    margin:2px 0 0 5%;
+
+  }
