--- a/square-root/src/styles/Partner.css
+++ b/square-root/src/styles/Partner.css
@@ -1,87 +1,66 @@
-.float-container-partner {
-  padding: 2%;
-  height: 550px;
-  background-color: var(--mainGreen);
-  margin: 2% 5%;
-}
-
-.float-child {
-  float: left;
-  padding: 0%;
-  max-width: 960px;
-}
-
-.background-white {
+.form-wrapper{
+  display:grid;
+  grid-template-columns: 40% 60%;
+  width:90%;
+  padding:3%;
+  margin:5%;
+  grid-auto-rows: minmax(200px, auto);
   background-color: white;
-  padding: 2%;
+  border: 4px solid var(--mainGreen);
 }
 
-.partner-h1 {
+.form-box1{
+padding: 5%;
+}
+
+.form-box2{
+  padding-left:5%;
+  width: 80%;
+}
+
+.box2-h1 {
   font-size: 35px;
   font-weight: bold;
+  color: var(--mainGrey);
 }
 
-.about {
-  width: 100%;
-  height: 100%;
-}
-.about img {
-  height: 100%;
-}
-
-.width-40 {
-  width: 40%;
-}
-
-.width-60 {
-  width: 60%;
-}
-.about-name {
-  font-size: 50px;
-  color: white;
-  padding: 3%;
-  position: relative;
-  top: 30%;
-  left: 10%;
-}
-.partner-p {
+.box2-p {
   font-size: 18px;
-  color: black;
+  color: var(--mainGrey);
+}
+
+.box2-fields{
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 .partner-field {
-  margin-bottom: 20px;
+  padding-bottom: 3%;
 }
 
-.partner-field input {
-  border: none;
-  border-radius: 0;
-  border-bottom: 1px solid grey;
-}
-
-.partner-field p {
-  margin-bottom: -8%;
+.partner-field input{
+  height:8vh;
 }
 
 a[href="terms-and-conditions"] {
-  color: black;
+  color: var(--mainGrey);
+  vertical-align: middle;
+  font-size: 15px;
+  font-weight:bold;
 }
 
 /* The checkbox container */
 .checkbox-container {
-  display: block;
   position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
+  padding-left: 40px;
   cursor: pointer;
   font-size: 15px;
+  vertical-align: middle;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
 }
-
-
 
 .checkbox-container input {
   position: absolute;
@@ -95,42 +74,111 @@ a[href="terms-and-conditions"] {
   position: absolute;
   top: 0;
   left: 0;
-  height: 25px;
-  width: 25px;
-  border: 1px solid #799779;
+  height: 30px;
+  width: 30px;
+  border:1px solid var(--mainGreen);
+  border-radius: 5px;
 }
 
 .checkmark:after {
   content: "";
   position: absolute;
   display: none;
+  
 }
 
 .checkbox-container input:checked ~ .checkmark:after {
   display: block;
+  
 }
 
 .checkbox-container .checkmark:after {
-  left: 8px;
+  left: 10px;
   top: 1px;
   width: 8px;
-  height: 18px;
+  height: 20px;
   border: 3px solid #799779;
   border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
+  
 }
 
-.btn-partner {
+.box2-btn {
   width: 20%;
   padding: 10px;
-  background-color: white;
-  border-color: 1px solid #799779;
-  border-radius: 3px;
+  background-color: var(--mainGreen);
+  color:white;
+  font-weight: bold;
+  border: none;
+  font-size: 18px;
   float: right;
   cursor: pointer;
 }
+
+.box2-btn:hover{
+  background-color: white;
+  color:black;
+  border: 1px solid grey;
+}
+
+
+@media only screen and (max-width:780px){
+  .form-wrapper{
+    grid-template-columns: 1fr;
+    grid-template-rows:0vh 95vh;
+  }
+  .form-box1 img{
+    width:100%;
+  }
+  .form-box2 {
+    background-color: rgba(255, 255, 255, 0.6);
+    width:100%;
+    padding:10%;
+    padding-top:15%;
+    height:100%;
+    font-size:50%;
+  }
+
+  .box2-fields{
+    padding-top:20%;
+  }
+  .box2-btn{
+    position:absolute;
+    z-index:10;
+    float:right;
+  }
+  .partner-field input{
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+  .checkbox-container{
+    padding-left: 40px;
+  }
+  
+  .checkmark{
+    background-color:white;
+  }
+}
+
+@media only screen and (max-width:630px){
+  .form-wrapper{
+    grid-template-columns: 0fr 1fr;
+    grid-template-rows:0vh 80vh;
+  }
+  .form-box1 img{
+    width:0px;
+    height:0px;
+  }
+  .form-box2{
+    padding-top:10%;
+  }
+
+  .box2-fields{
+    padding-top:10%;
+  }
+} 
+
 
 .inspo-images {
   border: 3px solid #fff;
