--- a/square-root/src/styles/Partner.css
+++ b/square-root/src/styles/Partner.css
@@ -115,12 +115,12 @@ a[href="terms-and-conditions"] {
   font-size: 18px;
   float: right;
   cursor: pointer;
+  border-radius: 5px;
 }
 
 .box2-btn:hover{
-  background-color: white;
-  color:black;
-  border: 1px solid grey;
+  background-color: #6C836C;
+  color:white;
 }
 
 
