--- a/square-root/src/styles/Why.css
+++ b/square-root/src/styles/Why.css
@@ -95,6 +95,12 @@
     font-size: clamp(18px,calc(1rem + .7320644217vw),28px);
     letter-spacing: -.03;
 }
+
+.u-mrg--txt2{
+    margin: 0 0 0 24px;
+}
+
+
 .u-mrg--reset p {
     margin: 0 0 1em;
     line-height: calc(1ex/.32);
@@ -187,10 +193,12 @@
     float: none;
 }
 
+.strong--m{
+    font-size: 18px;
+}
 
 
-
-
+/* ----- OLD CSS FOR WHY.JS------
 
 .float-container {
    display:grid;
@@ -270,3 +278,5 @@
     left: 45%;
     font-size: 20px;
 }
+
+*/
