smooth scroll cont.

--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -100,7 +100,7 @@
     padding: 2px;
     width: 100px;
     font-size: x-small;
-  }  
+  }
   .front-btn-2 {
     padding: 2px;
     width: 80%;
@@ -114,11 +114,10 @@
   .front-btn-1 {
     font-size: small;
   }
-  
+
   .front-btn-2 {
     font-size: medium;
   }
-  
 }
 @media screen and (min-width: 992px) {
   .banner {
@@ -130,7 +129,7 @@
   .front-btn-1 {
     font-size: large;
   }
-  
+
   .front-btn-2 {
     font-size: large;
   }
@@ -176,7 +175,6 @@
   font-size: 30px;
 }
 
-
 .bd-notification {
   padding-top: 40px;
   margin: 50px;
@@ -213,32 +211,40 @@
   width: 40%;
 }
 
-
-
-
 /*----------------------
 Smooth Scroll --------*/
 
-.homepage{
-  margin:0;
-  padding:0;
-  line-height: 1.6;
-  height:100vh;
+.disable-scrollbars::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* Chrome/Safari/Webkit */
+}
 
+.disable-scrollbars {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+
+.homepage {
+  overflow: hidden;
+  position: relative;
+  margin: 0;
+  padding: 0;
+  line-height: 1.6;
+  height: 100vh;
 }
 
 .front-container {
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: 100%;
   /* CSS Smooth Scroll */
-  overflow-y: scroll; 
   scroll-behavior: smooth;
-  scroll-snap-type:y mandatory;
+  scroll-snap-type: y mandatory;
+  overflow-y: auto;
 }
 
 section {
-  display:flex;
-  flex-direction:column;
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -247,33 +253,32 @@ section {
   scroll-snap-align: center;
 }
 
-section h1{
+section h1 {
   font-size: 4rem;
 }
 
-section p{
-  font-size:1.5rem;
+section p {
+  font-size: 1.5rem;
 }
 
-section#first{
-background-color: lightpink;
+section#first {
+  background-color: lightpink;
 
-/*background: :url() no-repeat center center/ cover;*/
+  /*background: :url() no-repeat center center/ cover;*/
 }
 
-section#second{
+section#second {
   background-color: lightgreen;
 }
 
-section#third{
+section#third {
   background-color: lightblue;
 }
 
-section#fourth{
+section#fourth {
   background-color: lightyellow;
 }
 
-section#fifth{
-  height:60px;
+section#fifth {
+  height: 60px;
 }
-
