--- a/square-root/src/App.sass
+++ b/square-root/src/App.sass
@@ -24,8 +24,7 @@ $link: $green
 $fullhd-enabled: false
 $dark: $darker
 $mobile-enabled: true
-
-
+$body-overflow-y: auto
 
 // Import only what you need from Bulma
 @import '../node_modules/bulma/sass/utilities/_all.sass'
