--- a/square-root/src/styles/Why.css
+++ b/square-root/src/styles/Why.css
@@ -192,7 +192,7 @@
     display:grid;
     grid-gap:clamp(24px,2.9282576867vw,40px);
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto;
+    grid-template-rows: auto auto 0px;
 }
 
 .c-grid--span-item-a{
@@ -215,19 +215,24 @@
 
   @media screen and (max-width: 600px) {
     .c-grid--span {
-      grid-template-columns: repeat(1,1fr);
-    }
+      grid-template-columns: repeat(1, 1fr);
+      grid-template-rows: auto;
+     
+        }
     .c-grid--span-item-a {
         grid-row:1;
         grid-column: 1 / 3;
+
       }
       .c-grid--span-item-b {
         grid-row:2;
         grid-column: 1 / 3;
+
       }
       .c-grid--span-item-c {
         grid-row:3;
         grid-column: 1 / 3;
+
       }
 
   }
@@ -300,6 +305,10 @@
     height:auto;
     vertical-align: middle;
 }
+
+
+
+
 
 
 
