--- a/square-root/src/styles/SingleGreenspace.css
+++ b/square-root/src/styles/SingleGreenspace.css
@@ -28,10 +28,11 @@ h5 {
   padding-top: 1%;
   padding-left: 3%;
 }
-p {
+ /*p {
   padding-bottom: 5%;
   padding-top: 2%;
 }
+*/
 
 .options {
   position: absolute;
