--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -242,7 +242,7 @@ Smooth Scroll --------*/
   overflow-y: auto;
 }
 
-section {
+.front-container section {
   display: flex;
   flex-direction: column;
   align-items: center;
