started fixing creating projects, rows in a table lead to a given project

--- a/square-root/src/pages/user-pages/projects.css
+++ b/square-root/src/pages/user-pages/projects.css
@@ -115,11 +115,17 @@
   font-weight: 500;
 }
 
+.p-tr {
+  width: 100%;
+}
+
 .p-td {
+  position: absolute;
   background-color: #ffffff;
   padding: 15px;
   color: var(--mainBlack);
   font-weight: 400;
+  width: 100%;
 }
 
 .fade-enter {
