--- a/square-root/src/pages/user-pages/projects.css
+++ b/square-root/src/pages/user-pages/projects.css
@@ -155,7 +155,7 @@
 
 .fade-appear.fade-appear-active {
   opacity: 1;
-  transition: opacity .5s ease-in;
+  transition: opacity 0.5s ease-in;
 }
 /* end of TABLE */
 /* BUTTON : NEW PROJECT*/
@@ -297,7 +297,7 @@ a.btn-back:hover {
   color: var(--mainBlack);
 }
 
-input[type="text"] {
+/*input[type="text"] {
   padding: 1em;
   background-color: white;
   box-sizing: border-box;
@@ -307,7 +307,7 @@ input[type="text"] {
   border-radius: 5px;
   border: 1px solid lightgray;
   font-size: 18px;
-}
+}*/
 
 /*FLEX BOXES (PostNr & PostSted */
 .p-flex /* div PostNr & PostSted */ {
@@ -546,6 +546,7 @@ button[type="submit"] {
   font-size: 15px;
   font-weight: 550;
 }
+
 button[type="submit"]:hover {
   background-color: #6ba3fa;
 }
@@ -575,9 +576,19 @@ button[type="submit"]:hover {
   color: var(--mainBlack);
 }
 
-.acc-container input[type="number"],
-select {
-  width: 38%;
+.acc-title h1 {
+  display: inline;
+  font-weight: 400;
+  font-size: x-large;
+  color: var(--mainBlack);
+}
+
+.acc-container form {
+  margin: 2% 0 4% 0;
+}
+
+.acc-container select {
+  width: 60%;
   background-color: white;
   border-radius: 5px;
   border: 1px solid lightgray;
@@ -587,9 +598,8 @@ select {
   box-sizing: border-box;
   font-weight: 400px;
   margin: auto;
-}
-.acc-container input[name="email"] {
-  width: 60%;
+  color: gray;
+  -webkit-appearance: none;
 }
 
 button[name="btn-account"] {
@@ -600,9 +610,4 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
-}
-
-select {
-  color: gray;
-  -webkit-appearance: none;
 }
