Adding content for category info

--- a/square-root/src/styles/frontpages.css
+++ b/square-root/src/styles/frontpages.css
@@ -32,9 +32,9 @@
     text-align: inherit;
 }
 
-.c-img img{
-    display:inline-block;
-    max-width:100%;
+.c-img {
+    display:block;
+    width:100%;
     height:auto;
     vertical-align:middle;
 }
@@ -353,6 +353,9 @@ END OF HOR*/
 
   }
 
+
+/*ON HOVER'S */
+
 .zoom-on-hover {
     max-width: 100%;
     max-height: auto;
@@ -368,6 +371,66 @@ END OF HOR*/
     opacity: 0.8;*/
     cursor:pointer;
 }
+
+/*
+.img-overlay {
+position: absolute;
+  top: 85%;
+  bottom: 0%;
+  left: 60%;
+  right:0;
+  height: 15%;
+  width: 40%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: white;
+}
+.white-on-hover{
+    position:relative;
+}
+.white-on-hover:hover .img-overlay{
+    opacity:1;
+}
+
+
+.text-overlay{
+color:white;
+  font-size: 20px;
+  position: absolute;
+  bottom: 0%;
+  right: 0%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+*/
+.white-on-hover{
+    position:relative;
+}
+
+.img-overlay {
+    position: absolute;
+    bottom: 3%;
+    right: 5%;
+      height: 15%;
+      width: 100%;
+
+    ;
+    }
+
+.text-overlay{
+        color:white;
+      font-size: 20px;
+      position: absolute;
+      bottom: 0%;
+      right: 0%;
+   ;
+    }
+    
+
+/*END ON HOVER'S */
 
 
 .o-card-media{
